# fastapi_hexogonal_template

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
src/: server.py  settings.py
src/app/: __init__.py
src/app/auth/: handlers.py  schemas.py
src/app/dependencies/: aggregates.py  auth.py  repos.py
src/domain/user/: __init__.py  dtos.py  errors.py  repos.py  user.py
src/infra/: base_repository.py  db.py
src/infra/migrations/: env.py  migrate.py
src/infra/migrations/versions/: 1754057967__1f3d91b9aeaf.py
src/infra/user/: models.py  repos.py
tests/: conftest.py  fixtures.py
tests/unit/user/: test_user.py
